--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
 .App {
-  text-align: left;
+  text-align: center;
 }
 
-.App-logo {
-  height: 80px;
-  pointer-events: none;
+
+.all-contacts-container {
+  border-left: 1px solid grey;
+  width: 50%;
+  float: right;
+  display: flex;
+  flex-direction: column;
+  /* padding: 20px; */
+  margin-top: 20px;
+  margin-right: 15%;
+  /* border-radius: 30px; */
+}
+.contacts-header{
+  font-size: 20px;
+  text-decoration: underline;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
-  background-color: #4c5363;
+  background-color: beige;
   height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
+  border-bottom:1px solid grey; ;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
