--- a/src/css/contactcreatemodal.css
+++ b/src/css/contactcreatemodal.css
@@ -27,3 +27,14 @@
     background-color: rgb(188, 155, 113);
     border-color: rgb(188, 155, 113);
 }
+.cancel-btn{
+    background-color: grey;
+}
+.save-btn{
+    background-color: burlywood;
+    border-color: rgb(188, 155, 113);
+}
+.save-btn:hover{
+    background-color: rgb(188, 155, 113);
+    border-color: rgb(188, 155, 113);
+}
